--- a/debian/rules
+++ b/debian/rules
@@ -21,12 +21,6 @@ TMP     = $(CURDIR)/debian/$(PACKAGE)
 
 CFLAGS = -Wall -g
 
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
 build: build-stamp
 build-stamp: $(QUILT_STAMPFN)
 	dh_testdir
@@ -61,6 +55,8 @@ binary-arch:
 binary-indep: build install
 	dh_testdir
 	dh_testroot
+	dh_installdocs README
+	dh_installchangelogs
 	dh_perl
 	dh_compress
 	dh_fixperms
