--- a/debian/rules
+++ b/debian/rules
@@ -55,7 +55,7 @@ binary-arch:
 binary-indep: build install
 	dh_testdir
 	dh_testroot
-	dh_installdocs README
+	dh_installdocs
 	dh_installchangelogs
 	dh_perl
 	dh_compress
